--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,8 +21,8 @@ jobs:
 #      - name: Install dependencies
 #        run: npm install
 
-      - name: Build project
-        run: npm run build  # Adjust this command if your project doesn't use a build step
+#      - name: Build project
+#        run: npm run build  # Adjust this command if your project doesn't use a build step
 
       - name: Deploy to Vercel
         env:
