--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,10 +23,10 @@ jobs:
 
 #      - name: Build project
 #        run: npm run build  # Adjust this command if your project doesn't use a build step
+      - name: Install vercel
+        run: npm install -g vercel
 
       - name: Deploy to Vercel
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
-        run: |
-          npm install -g vercel
-          vercel --prod --token $VERCEL_TOKEN --confirm
+        run: vercel --prod --token $VERCEL_TOKEN --confirm
