--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,15 +18,8 @@ jobs:
         with:
           node-version: '18'  # Use the Node.js version your project requires
 
-#      - name: Install dependencies
-#        run: npm install
-
-#      - name: Build project
-#        run: npm run build  # Adjust this command if your project doesn't use a build step
       - name: Install vercel
         run: npm install -g vercel
 
       - name: Deploy to Vercel
-        env:
-          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
-        run: vercel --prod --token $VERCEL_TOKEN --confirm
+        run: vercel --prod --token ${{ secrets.VERCEL_TOKEN }} --confirm
